--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>TinDog</title>
+  <title>DoggyDate</title>
 <style>
   
 </style>
@@ -25,9 +25,9 @@
 
 <div class="container col-xxl-8 px-4 py-5"> <div class="row flex-lg-row-reverse align-items-center g-5 py-5"> <div class="col-10 col-sm-8 col-lg-6"> <img src="images/iphone.png" class="d-block mx-lg-auto img-fluid" alt="app-demo" height="200px" loading="lazy"> </div> <div class="col-lg-6"> <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Where Dogs can Meet new and interesting Dogs nearby</h1> 
 
-  <p class="lead">Welcome to TinDog [CodedbyMike] — the ultimate dating (or playdate) app for dogs and their humans.
+  <p class="lead">Welcome to DoggyDate [CodedbyMike] — the ultimate dating (or playdate) app for dogs and their humans.
 
-Built with a clean, modern Bootstrap framework, TinDog combines sleek design with a paw-sitively fun concept: helping pups find their perfect match, one tail wag at a time. Whether your dog is looking for love, friendship, or just a partner to chase squirrels with, TinDog makes it easy to connect.</p> 
+Built with a clean, modern Bootstrap framework, DoggyDate combines sleek design with a paw-sitively fun concept: helping pups find their perfect match, one tail wag at a time. Whether your dog is looking for love, friendship, or just a partner to chase squirrels with, TinDog makes it easy to connect.</p> 
 
   <div class="d-grid gap-2 d-md-flex justify-content-md-start"> <button type="button" class="btn btn-light  btn-lg px-4 me-md-2" fdprocessedid="c0bkpp"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-apple mb-1" viewBox="0 0 16 16">
@@ -155,7 +155,7 @@ Brooklyn,New york</p>
 <div class="container"> <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 mt-5 "> <div class="col mb-3"> 
   
   
-  <p class="text-body-secondary">© Tindog</p> </div> <div class="col mb-3"></div> <div class="col mb-3"> <h5>Section</h5> <ul class="nav flex-column"> 
+  <p class="text-body-secondary">© DoggyDate</p> </div> <div class="col mb-3"></div> <div class="col mb-3"> <h5>Section</h5> <ul class="nav flex-column"> 
     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li> 
     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li> 
     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li> 
