--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <p class="lead">Welcome to DoggyDate [CodedbyMike] — the ultimate dating (or playdate) app for dogs and their humans.
 
-Built with a clean, modern Bootstrap framework, DoggyDate combines sleek design with a paw-sitively fun concept: helping pups find their perfect match, one tail wag at a time. Whether your dog is looking for love, friendship, or just a partner to chase squirrels with, TinDog makes it easy to connect.</p> 
+Built with a clean, modern Bootstrap framework, DoggyDate combines sleek design with a paw-sitively fun concept: helping pups find their perfect match, one tail wag at a time. Whether your dog is looking for love, friendship, or just a partner to chase squirrels with, DoggyDate makes it easy to connect.</p> 
 
   <div class="d-grid gap-2 d-md-flex justify-content-md-start"> <button type="button" class="btn btn-light  btn-lg px-4 me-md-2" fdprocessedid="c0bkpp"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-apple mb-1" viewBox="0 0 16 16">
