--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Click to invite
   <!-- Testimonial -->
   <section id="testimonial">
 
-    <div class="my-5"> <div class="p-5 text-center bg-body-tertiary"> <div class="container py-5"> <h3 class="text-body-emphasis">"Woof Wof-wooF woof" translation: I no longer have to sniff other dogs for love. I've found the love of my life on TinDog.- Paddy Barkson</h3> 
+    <div class="my-5"> <div class="p-5 text-center bg-body-tertiary"> <div class="container py-5"> <h3 class="text-body-emphasis">"Woof Wof-wooF woof" translation: I no longer have to sniff other dogs for love. I've found the love of my life on DoggyDate.- Paddy Barkson</h3> 
       <img  class="profile-img mt-5"src="images/dog-img.jpg" alt="dog-img">
       <p class="col-lg-8 mx-auto lead mt-2">
 Brooklyn,New york</p>
