--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="container col-xxl-8 px-4 py-5"> <div class="row flex-lg-row-reverse align-items-center g-5 py-5"> <div class="col-10 col-sm-8 col-lg-6"> <img src="images/iphone.png" class="d-block mx-lg-auto img-fluid" alt="app-demo" height="200px" loading="lazy"> </div> <div class="col-lg-6"> <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Where Dogs can Meet new and interesting Dogs nearby</h1> 
 
-  <p class="lead">Welcome to DoggyDate [CodedbyMike] — the ultimate dating (or playdate) app for dogs and their humans.
+  <p class="lead">Welcome to DoggyDate [CodedbyMikeW] — the ultimate dating (or playdate) app for dogs and their humans.
 
 Built with a clean, modern Bootstrap framework, DoggyDate combines sleek design with a paw-sitively fun concept: helping pups find their perfect match, one tail wag at a time. Whether your dog is looking for love, friendship, or just a partner to chase squirrels with, DoggyDate makes it easy to connect.</p> 
 
